* [2009-08-07] release 1.1.2 of LibTMCG
* small bugfixes for GCC 4.3.x
* [2007-05-05] release 1.1.1 of LibTMCG
* [2007-05-05] security fix (trivial group generator attack)
* [2007-04-16] release 1.1.0 of LibTMCG
* [2007-04-15] changed interface of TMCG_SecretKey to allow non-NIZK keys
* [2007-04-13] use faster shuffle algorithm in TMCG_CreateStackSecret(...)
* [2007-03-22] release 1.0.1 of LibTMCG
* [2007-03-21] function version_libTMCG() added
* [2007-03-20] security fix (avoid modulo bias in TMCG_CreateStackSecret(...))
* [2006-04-13] initial release 1.0.0 of LibTMCG