@@ -1,4 +1,4 @@
-@set UPDATED 27 February 2008
-@set UPDATED-MONTH February 2008
-@set EDITION 1.1.2
-@set VERSION 1.1.2
+@set UPDATED 21 November 2009
+@set UPDATED-MONTH November 2009
+@set EDITION 1.1.3
+@set VERSION 1.1.3
